--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,12 @@ pytest
 pytest-env
 tqdm
 numpy
-torch>=1.11.0
-torchvision>=0.12.0
-cudatoolkit
+pandas
+torch
+torchvision
 wandb
 tensorboard
-transformers>=4.14.1
+transformers
 diffusers
 accelerate
 xformers
